# qfat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.sh
configs/inference/: ant.yaml  kitchen.yaml  kitchen_conditional.yaml  mr.yaml  pusht.yaml  pusht_image.yaml  pusht_visualization.yaml  ur3.yaml  ur3_conditional.yaml
configs/training/: ant.yaml  kitchen.yaml  kitchen_conditional.yaml  mr.yaml  pusht.yaml  pusht_image.yaml  ur3.yaml  ur3_conditional.yaml
scripts/: inference.py  train.py
src/hydra_plugins/: search_plugin.py
src/qfat/: __init__.py  constants.py  utils.py
src/qfat/callbacks/: callbacks.py  inference_callbacks.py  train_callbacks.py
src/qfat/conf/: __init__.py  configs.py
src/qfat/datasets/: ant.py  dataset.py  kitchen.py  multi_route.py  pusht.py  slicer.py  transform.py  ur3.py
src/qfat/entrypoints/: entrypoint.py  inference.py  training.py
src/qfat/environments/: env.py  goal_conditional.py
src/qfat/environments/ant/: __init__.py  ant_maze_multimodal.py  ant_wrapper.py  maze_env.py  maze_env_utils.py
src/qfat/environments/half_cheetah/: env.py
src/qfat/environments/kitchen/: env.py
src/qfat/environments/multi_route/: env.py  multi_route.py
src/qfat/environments/pusht/: env.py
src/qfat/environments/ur3/: play_with_env.py  setup.py  ur3_wrapper.py
src/qfat/models/: decoder_block.py  encoders.py  generative_model.py  qfat.py
src/qfat/normalizer/: normalizer.py
src/qfat/runtime_transforms/: runtime_transforms.py
src/qfat/samplers/: __init__.py  sampler.py
(+129 files in other folders)
